[project]
name = "SocialSage-AI"
version = "0.1.0"
description = "Empowering Modern Teams to Create Better, Faster, and Smarter — Without Breaking the Bank"
authors = [
    {name = "X-Innovate", email = "we@xinnovate.app"},
]
dependencies = ["crewai[tools]>=0.119.0", "crewai-tools>=0.44.0", "python-dotenv>=1.1.0"]
requires-python = "<3.13,>=3.10"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = true
